--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
+        <header>
+            <div class="container">           
+                <div>
+                    <img src="logo.png"/>
+                </div>
+                <div>
+                    <ul id="navigation">
+                        <li><button id="menu">Home</button></li>
+                        <li><button id="menu">About</button></li>
+                        <li><button id="menu">Computer</button></li>
+                        <li><button id="menu">Laptop</button></li>
+                        <li><button id="menu">Products</button></li>
+                        <li><button id="menu">Contact us</button></li>
+                        <li><button id="login">Login</button></li>
+                    </ul>
+                </div>
+                </div>
+            </div>
+        </header>
+        <section>
+        
+        </section>
+        <footer>
+        
+        </footer>
     </body>
 </html>
