--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <div class="container">           
+                <div class="container">           
                 <div>
                     <img src="logo.png"/>
                 </div>
@@ -33,7 +33,6 @@
                     <a href="#"><img src="login.png" alt="login-logo" id="login" /></a>
                 </div>
                 </div>
-            </div>
         </header>
         <section id="article">
             <div class="container2">
@@ -62,15 +61,15 @@
                 <form id="contact-form">
                     <div class="contact-content">
                     <label for="name"></label>
-                    <input type="text" id="Name" Name="Name" value="Name"> 
+                    <input type="text" id="Name" Name="Name" placeholder="Name"> 
                     </div>
                     <div class="contact-content">
                     <label for="Email"></label>
-                    <input  type="Email" id="Email" name="Email" value="Email">
+                    <input  type="Email" id="Email" name="Email" placeholder="Email">
                     </div>
                     <div class="contact-content">
                     <label for="Phone Number"></label>
-                    <input  type="text" id="Phone Number" name="Phone Number" value="Phone Number">
+                    <input  type="text" id="Phone Number" name="Phone Number" placeholder="Phone Number">
                     </div>
                     <textarea class="contact-content-text-area"></textarea>
                     <div class="contact-content">
@@ -82,8 +81,8 @@
         </section>
         <footer>
             <div class="container3">
-                <div id="logo footer">
-                    <img src="logo1.png"/> 
+                <div>
+                    <img id="logo-footer" src="logo1.png"/> 
                 </div>
                 <div class="contact-us-footer" id="contact-us-footer">
                     <h2>Contact us</h2>
@@ -95,10 +94,14 @@
                     <h2>About us</h2>
                     <p> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
                 </div>
+                <div class="find-us-footer">
+                    <h2>Find us</h2>
+                    <iframe id="map" width="250" height="250" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+                </div>
                 <div class="newsletter-footer">
                     <h2>Newsletter</h2>
                     <label for="Email-footer"></label><br>
-                    <input  type="Email" id="Email-footer" name="Email-footer" value="Enter Your Email">
+                    <input  type="Email" id="Email-footer" name="Email-footer" placeholder="Enter Your Email">
                     <label for="Subscribe"></label><br>
                     <input type="submit" id="Subscribe" Name="Subscribe" value="SUBSCRIBE">
                 </div>
