--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 </div>
                 </div>
         </header>
+        <section id="main-background">
+        </section>
         <section id="article">
             <div class="container2">
                 <div class="row">
